# ModuTask

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  optimize_configuration.py  pyproject.toml  robot.yaml  sample.py  scenario.yaml  simulation_launcher.py  task_allocation.py  test.ipynb  test.py  translated_task_allocation_slides.pptx:Zone.Identifier
configs/: Map_config.yaml  Module_type_config.yaml  Robot_type_config.yaml  Task_config.yaml  make_module_config.py
configs/20250305/: map.yaml  module_type.yaml  robot_type.yaml
configs/20250414/: main.py  main_01.py  main_02.py  map.yaml  module.yaml  property.yaml  risk_scenario.yaml  robot_type.yaml  task.yaml  task_dependency.yaml
configs/initial/: Modules.yaml  Robots.yaml
configs/make_init/: make_module_config.py  make_scenario_config.py  make_task_config.py  prompt.yaml
configs/optimize_configuration_sample/: module.yaml  property.yaml
configs/perf_calib/: 01_module.yaml  02_module.yaml  03_robot_type.yaml
configs/quick_sample_000/: property.yaml  risk_scenario.yaml  robot_type.yaml  task.yaml  task_dependency.yaml
configs/quick_sample_001/: property.yaml  risk_scenario.yaml  robot.yaml  robot_type.yaml  task_priority.yaml
configs/robot_configuration_sample/: module.yaml  property.yaml
configs/sample000/: module.yaml  module_type.yaml  property.yaml  risk_scenario.yaml  robot.yaml  robot_type.yaml  scenario.yaml  simulation.yaml  task.yaml  task_dependency.yaml  task_priority.yaml
configs/sample001/: Module_type.yaml  Robot.yaml  Task.yaml  module.yaml  module_type.yaml  property.yaml  risk_scenario.yaml  robot.yaml  robot_type.yaml  task.yaml  task_dependency.yaml  task_priority.yaml
docs/: Book1.xlsx  ~$20250305_task_allocation_tanigaki.pptx
modutask/: logger.py  main.py  robot_configuration.py  simulation_launcher.py  task_allocation.py
properties/: test.yaml  test_property.yaml
src/: main.py  readme.txt  simulation.py  simulation_h.py
(+504 files in other folders)
