[project]
name = "modutask"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuki Tanigaki"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)"
]
[tool.poetry]
packages = [{ include = "modutask" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
