[project]
name = "modutask"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuki Tanigaki"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]
[tool.poetry]
packages = [{ include = "modutask" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
black = "^25.1.0"
flake8 = "^7.1.2"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = true